# kaz-video-dub

./: .gitignore  AGENTS.md  README.md  pixi.toml  pyproject.toml  pyrightconfig.json
configs/: default.yaml  real-translate.yaml
configs/prompts/: translate_en_to_kk.txt  translate_en_to_zh_subtitle.txt
docs/: README.md  dependency-management-pixi.md
docs/designs/: tts-audio-alignment-strategy.zh.md  tts-duration-control.md
docs/guides/: gemini-tts-voices.md
docs/plans/: tts-duration-control-implementation.md
docs/proposals/: voice-annotation-for-tts.md
src/video_dub/: __init__.py  cli.py  config.py  pipeline.py
src/video_dub/ffmpeg/: commands.py  probe.py
src/video_dub/models/: manifest.py  segment.py  transcript.py
src/video_dub/providers/: gemini_retry.py  gemini_translate_provider.py  gemini_tts_provider.py  mlx_whisper_provider.py  pyannote_provider.py  whisperx_provider.py
src/video_dub/services/: audio_compose.py  audio_extract.py  diarization.py  repair.py  subtitle.py  synthesis.py  transcription.py  translation.py  video_mux.py
src/video_dub/storage/: artifacts.py  (+2 more)
tests/: test_audio_extract.py  test_diarization_service.py  test_duration_control.py  test_ffmpeg_commands.py  test_gemini_retry.py  test_gemini_translate_resilience.py  test_gemini_tts_resilience.py  test_manifest.py  test_mlx_whisper_provider.py  test_models.py  test_pipeline.py  test_pyannote_provider.py  test_run_layout.py  test_subtitle.py  test_translate_provider.py  test_translation_service.py  test_tts_pipeline.py  test_tts_provider.py  test_whisperx_provider.py
(+5 files in other folders)
